<resources>
    <string name="app_name">App_Domotica</string>
    <string name="listado_de_elementos">LISTADO DE ELEMENTOS</string>
    <string name="ventana_abierta">ventana abierta</string>
    <string name="ventana_cerrada">ventana cerrada</string>
    <string name="volver">volver</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="description">Activa el modo oscuro para un cambio visual</string>
    <string name="token_homeassistant">Token HomeAssistant</string>
    <string name="token_description">Modifica el token de acceso a HomeAssistant</string>
    <string name="logout_session">Cierra la sesión del usuario actual</string>
    <string name="logout">Cerrar sesión</string>
    <string name="user_token">Token de usuario</string>
    <string name="guardar">guardar</string>
    <string name="token_actual_del_usuario">Token actual del usuario</string>
    <string name="introduce_el_nuevo_token">Introduce el nuevo token</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="forecast">Pronóstico</string>
    <string name="temperature">Temperatura</string>
    <string name="pressure">Presión del aire</string>
    <string name="todo">TODO</string>
    <string name="humidity">Humedad</string>
    <string name="wind_speed">Velocidad del viento</string>
    <string name="battery">Batería</string>
    <string name="lights">Luces</string>
    <string name="sensors">Sensores</string>
    <string name="settings">Opciones</string>
    <string name="cameras">Camaras</string>
    <string name="email">email</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="register">Crear una cuenta</string>
    <string name="registers">Registro</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="btn_register">Registrarse</string>
    <string name="already_acount">Ya tengo una cuenta</string>
    <string name="token">Token de acceso</string>
    <string name="opening_sensor_list">Listado de sensores de apertura</string>
    <string name="camera_list">Listado de camaras</string>
    <string name="ligth_list">Listado de luces</string>
    <string name="introduce_el_token_de_usuario">Introduce el token de usuario</string>
    <string name="url_home_assistant">URL Home Assistant</string>
    <string name="modifica_la_url_de_acceso_a_home_assistant">Modifica la url de acceso a Home Assistant</string>
    <string name="introduce_la_url_de_homeassistant">Introduce la URL de HomeAssistant</string>
    <string name="introduce_la_nueva_url">Introduce la nueva URL</string>
</resources>