<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lights"
            android:icon="@drawable/ic_light_on"
            android:title="@string/lights" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_sensor"
            android:title="@string/sensors" />
        <item
            android:id="@+id/nav_cameras"
            android:icon="@drawable/ic_camera"
            android:title="@string/cameras" />
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>