<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/background_component_hover">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/app_text"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="36dp"
            android:autofillHints="example@gmail.com"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints="contraseña"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/background_button"
            android:text="@string/login"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnLoginGoRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_button"
            android:text="@string/register"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>