<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/background_dialog"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvActualUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/introduce_la_url_de_homeassistant"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/app_text" />

    <TextView
        android:id="@+id/tvTokenUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/app_text"
        tools:text="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiI2NjAxNGIyMGU1MGU0OGFmYTE1NTYyMjA5MmY1NzE2ZCIsImlhdCI6MTcxMzk1NzU1MCwiZXhwIjoyMDI5MzE3NTUwfQ.pFm-4QjUL7508u6Bfer9rrMNULuF8m7X4dN9yf9n6nY, Content-Type: application/json" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNewUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/introduce_la_nueva_url"
        android:textColorHint="@color/title_text" />


    <Button
        android:id="@+id/btnGuardarUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_button"
        android:text="@string/guardar"
        android:textAllCaps="true" />
</LinearLayout>