<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_dialog"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvSensorNameDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/app_text"
        android:textStyle="bold"
        tools:text="Sensor comedor" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSensorBatteryTitle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/battery"
            android:textColor="@color/app_text"/>

        <TextView
            android:id="@+id/tvSensorBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_text"
            tools:text="100" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_battery"
            app:tint="@color/app_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSensorTemperatureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature"
            android:textColor="@color/app_text"/>

        <TextView
            android:id="@+id/tvSensorTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_text"
            tools:text="37º" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_temperature"
            app:tint="@color/app_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/btnReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background_button"
        android:text="@string/volver"
        android:textAllCaps="true" />
</LinearLayout>