<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cvWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="@color/background_component"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_weather"
                        app:tint="@color/app_text" />

                    <TextView
                        android:id="@+id/tvTitleWeather"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/forecast"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="Soledado"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_temperature"
                        app:tint="@color/app_text" />

                    <TextView
                        android:id="@+id/tvTitleTemperature"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/temperature"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="35,7ºC"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_pressure"
                        app:tint="@color/app_text" />

                    <TextView
                        android:id="@+id/tvTitlePressure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/pressure"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="1015,4 hPa"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_humidity"
                        app:tint="@color/app_text" />

                    <TextView
                        android:id="@+id/tvTitleHumidity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/humidity"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="45%"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="12dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_wind_speed"
                        app:tint="@color/app_text" />

                    <TextView
                        android:id="@+id/tvTitleWindSpeed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/wind_speed"
                        android:textColor="@color/app_text"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        tools:text="18,4 km/h"
                        android:textColor="@color/app_text"
                        android:layout_marginBottom="16dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/listado_de_elementos"
            android:textColor="@color/title_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvWeather" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItemList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>